# HomelabOS

./: .gitignore  DEVELOPMENT.md  README.md  ROADMAP.md  install.sh  pyproject.toml  pytest-out.txt  requirements.txt
apps/demo/: main.py  manifest.json
apps/demo-app/: main.py  manifest.json
apps/demo-buttons/: main.py  manifest.json
apps/demo-widget/: manifest.json
core/: __init__.py  __main__.py  app.py  constants.py  settings.py
core/events/: __init__.py  bus.py
core/hal/: __init__.py
core/models/: __init__.py  api.py  config.py  events.py  layout.py  manifest.py  marketplace.py  registry.py
core/plugins/: __init__.py  compatibility.py  installer.py  loader.py
core/routes/: __init__.py  config.py  events.py  marketplace.py  platform.py  plugin_api.py  plugin_assets.py  plugins.py  system.py
core/services/: backup.py  config_migrate.py  layout_cleanup.py  marketplace.py  soft_reset.py  system.py  tasks.py
core/storage/: __init__.py  json_store.py  registry_store.py
docs/: CONTRACTS.md  MARKETPLACE.md  PLUGIN_AUTHOR.md
schemas/: config.schema.json  layout.schema.json  manifest.schema.json
scripts/: backup-data.py  create-plugin.py  dev.py  generate_schemas.py  rebuild-shell.sh
scripts/install/: README.md  dev-vnc.sh  homelabos-update.sh  kiosk-launch.sh  quiet-boot.sh
sdk/: package.json
shell/: index.html  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_api.py  test_compatibility.py  test_config_migrate.py  test_contracts.py  test_demo_plugins.py  test_hal.py  test_health.py  test_marketplace.py  test_models.py
(+25 files in other folders)
